@@ -24,15 +24,22 @@ $test = &new TestSuite('Analyse (Stats)');
 $test->addTestFile('stats.php');
 $test->run(new HtmlReporter());
 
+// Top 10 stats
+$test = &new TestSuite('Top 10');
+$test->addTestFile('top10.php');
+$test->run(new HtmlReporter());
+
 // Add airport
 $test = &new TestSuite('Airport Search');
 $test->addTestFile('apsearch.php');
 $test->run(new HtmlReporter());
 
+// Autocompletion results
 $test = &new TestSuite('Autocomplete');
 $test->addTestFile('autocomplete.php');
 $test->run(new HtmlReporter());
 
+// ...and cleanup after all that
 $test = &new TestSuite('Cleanup');
 $test->addTestFile('cleanup.php');
 $test->run(new HtmlReporter());
